Workflows-commit (fixes)

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,6 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+          cache: "pipenv"
+      - run: |
+          python3 -m pip install --upgrade pipenv wheel
+          pipenv install
       - run: mkdocs build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
