Init containers article firebase.json defines emulator for hosting makefile uses firebase emulator for preview target

--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,22 @@
 {
-  "hosting": {
-    "public": "site",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
+    "hosting": {
+        "public": "site",
+        "ignore": [
+            "firebase.json",
+            "**/.*",
+            "**/node_modules/**"
+        ],
+        "emulators": {
+            "hosting": {
+                "port": 8000,
+                "host": "0.0.0.0"
+            }
+        },
+        "rewrites": [
+            {
+                "source": "**",
+                "destination": "/index.html"
+            }
+        ]
+    }
 }
